# Pong-cpp

./: .gitignore  CMakeLists.txt  README.md  SDLElements.h  WindowSize.h  pong.cpp
.github/workflows/: codeql.yml
img/: .Field.bmp.icloud
src/: Configure.h.in  Game.cpp  Game.h  Pong.cpp  SDLElements.h  WindowSize.h
src/UIElements/: Ball.cpp  Ball.h  Field.cpp  Field.h  MiddleLine.cpp  MiddleLine.h  Player.cpp  Player.h  Points.cpp  Points.h  UIBaseElement.cpp  UIBaseElement.h  UIElement.cpp  UIElement.h  UIFunctions.cpp  UIFunctions.h
